--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="map-container">
 		<div class="map-outer">
-			<h1>Map of Japan with Pan<br/>+/- buttons for zoom in/out</h1>
+			<h1>Map of Japan with Pan (drag with mouse)<br/>+/- buttons for zoom in/out</h1>
 			<div class="map-inner">
 				<div id="map-contain">
 					<img src="img/japmap.jpg" id="myImage"/>
